--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "gh-action-pr-label-release",
   "version": "1.0.0",
   "description": "Release by Pull Request label",
-  "main": "index.js",
+  "main": "./dist/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npx tsc",
+    "dist": "npx ncc build ./src/main.ts"
   },
   "repository": {
     "type": "git",
@@ -20,5 +21,19 @@
   "bugs": {
     "url": "https://github.com/ianwelerson/gh-action-pr-label-release/issues"
   },
-  "homepage": "https://github.com/ianwelerson/gh-action-pr-label-release#readme"
+  "homepage": "https://github.com/ianwelerson/gh-action-pr-label-release#readme",
+  "dependencies": {
+    "@actions/core": "^1.9.0",
+    "@actions/github": "^5.0.3"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.30.4",
+    "@typescript-eslint/parser": "^5.30.4",
+    "@vercel/ncc": "^0.34.0",
+    "eslint": "^8.19.0",
+    "eslint-config-standard": "^17.0.0",
+    "install": "^0.13.0",
+    "npm": "^8.13.2",
+    "typescript": "^4.7.4"
+  }
 }
