--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "npx tsc",
     "dist": "npx ncc build ./src/main.ts",
     "lint:check": "eslint \"**/*.ts\" --ignore-pattern node_modules/",
-    "lint:fix": "npm run lint:check -- --fix"
+    "lint:fix": "npm run lint:check -- --fix",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -34,6 +35,7 @@
     "@vercel/ncc": "^0.34.0",
     "eslint": "^8.19.0",
     "eslint-config-standard": "^17.0.0",
+    "husky": "^8.0.1",
     "install": "^0.13.0",
     "npm": "^8.13.2",
     "typescript": "^4.7.4"
