--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gh-action-pr-label-release",
+  "name": "gh-action-template",
   "version": "1.0.0",
   "description": "Release by Pull Request label",
   "main": "./dist/index.ts",
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ianwelerson/gh-action-pr-label-release.git"
+    "url": "git+https://github.com/ianwelerson/gh-action-template.git"
   },
   "keywords": [
     "github",
@@ -22,9 +22,9 @@
   "author": "Ian Welerson",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ianwelerson/gh-action-pr-label-release/issues"
+    "url": "https://github.com/ianwelerson/gh-action-template/issues"
   },
-  "homepage": "https://github.com/ianwelerson/gh-action-pr-label-release#readme",
+  "homepage": "https://github.com/ianwelerson/gh-action-template#readme",
   "dependencies": {
     "@actions/core": "^1.9.0",
     "@actions/github": "^5.0.3"
